syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.logistics.delivery.grpc";
option java_outer_classname = "DeliveryProto";

package delivery;

service DeliveryGrpcService {
    rpc CreateDelivery (CreateDeliveryRequest) returns (DeliveryResponse);
    rpc GetDelivery (GetDeliveryRequest) returns (DeliveryResponse);
    rpc GetDeliveryByOrder (GetDeliveryByOrderRequest) returns (DeliveryResponse);
    rpc UpdateStatus (UpdateStatusRequest) returns (DeliveryResponse);
    rpc TrackDelivery (TrackRequest) returns (TrackResponse);
}

message CreateDeliveryRequest {
    int64 order_id = 1;
    string pickup_address = 2;
    string delivery_address = 3;
}

message GetDeliveryRequest {
    int64 id = 1;
}

message GetDeliveryByOrderRequest {
    int64 order_id = 1;
}

message UpdateStatusRequest {
    int64 id = 1;
    string status = 2;
    string current_location = 3;
}

message TrackRequest {
    string tracking_number = 1;
}

message DeliveryResponse {
    int64 id = 1;
    int64 order_id = 2;
    string tracking_number = 3;
    string status = 4;
    string driver_name = 5;
    string driver_phone = 6;
    string pickup_address = 7;
    string delivery_address = 8;
    string current_location = 9;
    string estimated_delivery_time = 10;
    bool found = 11;
    string message = 12;
}

message TrackResponse {
    string tracking_number = 1;
    string status = 2;
    string current_location = 3;
    string estimated_delivery_time = 4;
    bool found = 5;
}
